--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,9 +4,86 @@
   переключая тему
 */
 
+.theme_dark {
+    --accent-color: #FF0070;
+    --title-color: #DB00FF;
+    --header-text-color: #000028;
+    --text-background: #FF0070;
+    --content-text-color: #F1B2CE;
+    --hover-color: rgba(255, 0, 112, 0.40);
+    --page-image: url(../images/cover-image-dark.png);
+}
+
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
+    /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+    background-image: var(--page-image);
+}
+
+.theme_dark .header__theme-menu-button_type_dark {
+    border: 1px solid var(--accent-color);
+}
+
+.theme_dark .header__up-block-rec::before {
+    content: 'rec';
+}
+
+.theme_dark .header__dot {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    border-right: 1px solid var(--accent-color);
+    border-top: 1px solid var(--accent-color);
+}
+
+.theme_dark .header__dot::before,
+.theme_dark .header__dot::after {
+    content: '';
+    position: absolute;
+    background-color: var(--accent-color);
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    text-align: center;
+    filter: drop-shadow(0px 0px 4px var(--accent-color));
+}
+
+@media (prefers-color-scheme: dark) {
+     :root {
+        --accent-color: #FF0070;
+        --title-color: #DB00FF;
+        --text-color: #000028;
+        --text-background: #FF0070;
+        --content-text-color: #F1B2CE;
+        --hover-color: rgba(255, 0, 112, 0.40);
+        --page-image: url(../images/cover-image-dark.png);
+    }
+    .header__up-block-rec {
+        color: var(--accent-color);
+        font-family: var(--main-font);
+        font-size: var(--small-text);
+    }
+    .header__up-block-rec::before {
+        content: 'rec';
+    }
+    .header__dot {
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        border-right: 1px solid var(--accent-color);
+        border-top: 1px solid var(--accent-color);
+    }
+    .header__dot::before,
+    .header__dot::after {
+        content: '';
+        position: absolute;
+        background-color: var(--accent-color);
+        width: 9px;
+        height: 9px;
+        border-radius: 50%;
+        text-align: center;
+        filter: drop-shadow(0px 0px 4px var(--accent-color));
+    }
 }
