--- a/styles/dark.css
+++ b/styles/dark.css
@@ -26,28 +26,8 @@
     border: 1px solid var(--accent-color);
 }
 
-.theme_dark .header__up-block-rec::before {
-    content: 'rec';
-}
-
-.theme_dark .header__dot {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    border-right: 1px solid var(--accent-color);
-    border-top: 1px solid var(--accent-color);
-}
-
-.theme_dark .header__dot::before,
-.theme_dark .header__dot::after {
-    content: '';
-    position: absolute;
-    background-color: var(--accent-color);
-    width: 9px;
-    height: 9px;
-    border-radius: 50%;
-    text-align: center;
-    filter: drop-shadow(0px 0px 4px var(--accent-color));
+.theme_dark .header__up-block-rec {
+    display: block;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -60,30 +40,28 @@
         --hover-color: rgba(255, 0, 112, 0.40);
         --page-image: url(../images/cover-image-dark.png);
     }
-    .header__up-block-rec {
-        color: var(--accent-color);
-        font-family: var(--main-font);
-        font-size: var(--small-text);
-    }
-    .header__up-block-rec::before {
-        content: 'rec';
-    }
     .header__dot {
-        display: grid;
-        justify-items: center;
+        display: flex;
         align-items: center;
-        border-right: 1px solid var(--accent-color);
-        border-top: 1px solid var(--accent-color);
+        justify-content: center;
+        color: var(--accent-color);
+        font-family: var(--main-font), monospace;
+        font-size: var(--small-text);
+        text-transform: uppercase;
+        position: relative;
     }
-    .header__dot::before,
-    .header__dot::after {
+    .header__dot::before {
         content: '';
         position: absolute;
+        color: var(--accent-color);
+        font-family: var(--main-font), monospace;
+        font-size: var(--small-text);
         background-color: var(--accent-color);
         width: 9px;
         height: 9px;
         border-radius: 50%;
         text-align: center;
-        filter: drop-shadow(0px 0px 4px var(--accent-color));
+        left: 42px;
+        filter: drop-shadow(0px 0px 4px 2px var(--accent-color));
     }
 }
