--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,8 @@
             border-radius: 50%;
             text-align: center;
             left: 42px;
-            filter: drop-shadow(0px 0px 4px 2px var(--accent-color));
+            top: 9px;
+            box-shadow: 0 0 4px 2px var(--accent-color);
         }
         
         .header {
@@ -240,11 +241,16 @@
             .concentrate {
                 grid-template-columns: 35.2% 1fr;
             }
-            .concentration__title {
-                padding-right: 491px;
+            .concentration {
+                grid-template-columns: 20% 1fr;
+            }
+            .concentration__bloks {
+                grid-column-start: 1;
+                grid-column-end: 3;
             }
             .advice {
                 grid-template-columns: 35.2% 1fr;
+                grid-template-rows: 2.2% repeat(5, min-content);
             }
             .advice__five {
                 padding-right: 0px;
@@ -275,16 +281,21 @@
                 gap: 11px;
                 column-gap: 20px;
                 grid-template-rows: min-content 1fr;
+                grid-template-columns: 1fr 1fr 1fr;
             }
             .concentration__bloks {
                 max-width: 315px;
+                grid-column-start: auto;
+                grid-column-end: auto;
+                grid-row-start: 2;
             }
             .concentration__title {
-                grid-column: 1/4;
-                padding-right: 620px;
+                grid-row-start: 1;
+                grid-row-end: 1;
             }
             .advice {
                 grid-template-columns: 34% 1fr;
+                grid-template-rows: 3.1% repeat(5, min-content);
             }
             .gallery__block {
                 grid-template-rows: 24.7% 30% 41%;
@@ -312,6 +323,7 @@
                 margin-top: 10px;
             }
             .advice {
+                align-items: start;
                 gap: 0px;
             }
             .advice .content__blocks {
